openshift/native/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: component-upgrade-logger
  labels:
    app: component-upgrade-logger
    paas.redhat.com/appcode: SET-001
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: component-upgrade-logger
  template:
    metadata:
      labels:
        deployment: component-upgrade-logger
        paas.redhat.com/appcode: SET-001
    spec:
      containers:
        - name: component-upgrade-logger
          image: images.paas.redhat.com/thofman/component-upgrade-logger:native-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 40Mi
            requests:
              cpu: 50m
              memory: 20Mi
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 3
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
