openshift/native/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: component-upgrade-logger
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
#    - name: https
#      port: 8443
#      targetPort: 8443
  selector:
    deployment: component-upgrade-logger
  type: ClusterIP
