openshift/native/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: component-upgrade-logger
  labels:
    app: component-upgrade-logger
    paas.redhat.com/appcode: SET-001
spec:
  to:
    kind: Service
    name: component-upgrade-logger
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
